# thrivemind-app

./: .gitignore  README.md  capture_evidence.py
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  test_gaps_demo.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ambient.py  auth.py  checkin.py  cuerpo.py  entorno.py  gamification.py  hue.py  insights.py  meal_planner.py  mente.py  preferences.py  search.py
backend/app/core/: auth.py  config.py  database.py  demo.py
backend/app/data/: thrivemind_rag_corpus_v4.json
backend/app/models/: checkin.py  preferences.py  user.py
backend/app/services/: auth_service.py  checkin_service.py  context_engine.py  correlation_service.py  emotional_classifier.py  farming_service.py  gamification_service.py  hue_custom_service.py  hue_service.py  intervention_service.py  knowledge_base.py  meal_planner_service.py  meditation_service.py  nutrition_service.py  orchestration_service.py  override_service.py  preferences_service.py  rag_service.py  recommendation_service.py  search_service.py  sentiment_service.py  solar_service.py  weather_service.py
backend/scripts/: seed_dashboard_demo.py
backend/tests/: conftest.py  test_checkin.py  test_correlation.py
docs/: DEPLOYMENT_GUIDE.md  FRONTEND_SETUP.md  GAP_ANALYSIS.md  GUIA_TECNICA_FINAL.md  HOW_TO_RUN.md  HUE_LOCAL_CONTROL.md  SUPABASE_SETUP.md
docs/resultados/: RESULTADOS_DOCUMENTADOS.md
docs/sql/: schema.sql
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
(+60 files in other folders)
