[project]
name = "thrivemind-backend"
version = "0.1.0"
description = "ThriveMind – Ecosistema de bienestar holístico orquestado por IA"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "supabase>=2.9.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.50.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
iot = [
    "phue>=1.1",
]
